components/tektonci/ingresses/tekton-dashboard-ingress.yaml
# Before run: Need to patch tekton-dashboard sevice to NodePort type:
# kubectl patch svc -n tekton-pipelines tekton-dashboard -p '{ "spec" : { "type" : "NodePort" } }'

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/load-balancer-name: tekton-dashboard
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: tekton-dashboard
                port:
                  number: 9097
