components/tektonci/ingresses/webhook-listener-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-listener-ingress
  namespace: tektonci
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:<your-acm-certificate-arn>
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: integrated
    alb.ingress.kubernetes.io/success-codes: 400,200
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /tekton
            pathType: Prefix
            backend:
              service:
                name: el-webhook-listener
                port:
                  number: 8080
